# real-time-climate-impact-index

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RUNBOOK.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
adr/: 0001-record-architecture-decisions.md  0002-stream-processor.md  0003-cloud-topology.md  0004-nonfunctional-invariants.md  0005-iac-and-teardown.md  0006-image-delivery.md  0007-data-source-adapter.md  0008-continuous-integration.md
app/: .gitkeep  dashboard.py
deploy/vps/: caddy-site.template  climate-index-dashboard.service.template  climate-index-refresh.service.template  climate-index-refresh.timer.template  compose.refresh.yml  demo.env.example  feed_history.py  install.sh  install_caddy_site.sh  publish_snapshot.py  refresh.sh  uninstall.sh
docker/: entrypoint.sh
docs/: 00_project_description.md  10_prd.md  20_spec.md  30_plan.md  40_tasks.md  50_cloud_strategy.md  60_panjuta_application.md
infra/: .gitkeep
infra/bootstrap/: main.tf  terraform.tfvars.example  variables.tf
infra/ephemeral/: compute.tf  main.tf  network.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
infra/ephemeral/templates/: user_data.sh.tftpl
infra/persistent/: budget.tf  ecr.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
scripts/: container_smoke.sh  derive_climatology.py  pre_deploy_gate.sh  teardown_audit.py  verify-precommit.sh  verify_at5_glue.py  verify_nfr_p3.py  verify_versions.py
src/climate_index/: __init__.py  config.py  consumer.py  labels.py  logging_utils.py  processor.py  producer.py  smoke.py  source_factory.py  store_factory.py
src/climate_index/adapters/: __init__.py  composite.py
src/climate_index/adapters/aws/: __init__.py  _dynamo.py  _keys.py  dynamo_reader.py  dynamo_store.py  iceberg_store.py  s3_raw_store.py
src/climate_index/adapters/duckdb/: __init__.py  _schema.py  reader.py  store.py
src/climate_index/adapters/kafka/: __init__.py  transport.py
src/climate_index/adapters/memory/: __init__.py  transport.py
src/climate_index/adapters/openmeteo/: __init__.py  source.py
src/climate_index/adapters/simulated/: __init__.py  source.py
src/climate_index/core/: __init__.py  confidence.py  engine.py  features.py  generators.py  models.py  validation.py  windowing.py
src/climate_index/interfaces/: __init__.py  source.py  store.py  transport.py
tests/aws/: conftest.py  test_canonical_keys.py  test_composite.py  test_dynamo_store.py  test_iceberg_store.py  test_lazy_imports.py  test_read_contract_parity.py  test_s3_raw_store.py  test_store_factory.py  test_teardown_audit.py  test_verify_scripts.py  test_write_path_factory.py
tests/hygiene/: test_house_style.py  test_no_credential_leak.py  test_no_demo_env_tracked.py  test_no_secrets_in_source.py  test_no_tfvars_tracked.py  test_precommit_gate.py  test_verify_versions.py
tests/hygiene/fixtures/: broken_precommit_config.yaml
tests/integration/: test_caddy_site_block.py  test_pre_deploy_gate_aws.py  test_terraform_offline.py
tests/portability/: test_no_cloud_sdk_import.py
tests/unit/: test_atomic_publish.py  test_confidence.py  test_config.py  test_consumer_recovery.py  test_dashboard.py  test_demo_feed.py  test_duckdb_reader.py  test_duckdb_store.py  test_engine.py  test_features.py  test_generators.py  test_interfaces.py  test_kafka_adapter.py  test_labels.py  test_models.py  test_openmeteo_source.py  test_pre_deploy_gate.py  test_processor.py  test_producer.py  test_simulated_source.py  test_smoke.py  test_source_factory.py  test_validation.py  test_windowing.py
