# Tool configuration only. There is deliberately NO [project] dependency table
# or dev-extras here: runtime pins live in requirements.txt and dev/tooling pins
# in requirements-dev.txt, so this file is not a rival pin list (NFR-M1, INV-5).

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts", "deploy/vps"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]
# Altair ships type information, but its schema wrappers (alt.Data and the rest
# of the generated classes) have untyped constructors, so strict mode rejects the
# call rather than the types. Exempt calls into that package instead of scattering
# inline ignores through the dashboard; everything else stays fully strict.
untyped_calls_exclude = ["altair"]
# Resolve first-party imports (climate_index) when type-checking the scripts/
# audit alongside src, without adding scripts to the checked file set wholesale.
mypy_path = "src"

# The Kafka client is intentionally not installed this track (it is imported
# lazily in the adapter run path and pinned in the infra track). Declare it as a
# stubless third-party module so strict mypy neither errors on the missing import
# nor flags a stale inline ignore. See the deferred-client note in the adapter.
[[tool.mypy.overrides]]
module = ["confluent_kafka.*"]
ignore_missing_imports = true

# The Phase 2 cloud SDKs ship partial or no type information and are imported
# lazily under adapters/ only. Declare them as stubless third-party modules so
# strict mypy stays honest without scattered inline ignores, matching the
# confluent_kafka treatment above. The pre-commit mypy hook does not install
# these, so the override also keeps the hook green.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "pyarrow.*", "pyiceberg.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
# deploy/vps carries the live demo's feeder and publisher, which are operator
# tooling like scripts/: importable by tests, deliberately not part of the package.
pythonpath = ["src", "scripts", "deploy/vps"]
testpaths = ["tests"]
addopts = "-ra"
